adding icon && readme

--- a/saper/saper.csproj
+++ b/saper/saper.csproj
@@ -8,4 +8,16 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="saper-png.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="saper-png.png" />
+  </ItemGroup>
+
 </Project>
